<resources>
    <string name="app_name">mobil</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>



    <string name="user_name">User name</string>
    <string name="email_address">Email Address</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="cancel">Cancel</string>
    <string name="category_name">Category Name</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_user_index">UserIndexActivity</string>
    <string name="drink_store">Drink Store</string>
    <string name="product_name">Product Name</string>
    <string name="price_1_990_ft">Price: 1 990 Ft</string>
    <string name="logout">Logout</string>
    <string name="save_shop_contact">Save Shop Contact</string>
    <string name="category">Category</string>
    <string name="price">Price</string>
    <string name="add">Add</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="update">Update</string>
    <string name="findneareststore">FindNearestStore</string>
    <string name="hikemate">HikeMate</string>
    <string name="save_contact">Save contact</string>
    <string name="descreption">Descreption</string>
    <string name="description">Description</string>
    <string name="turazas">Túrázni vágyóknak</string>
</resources>